# taxi_dashboard

./: .gitignore  app_task2.py  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
src/task2/: data.py
