[project]
name = "taxi-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.20.0",
    "gradio>=6.10.0",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.8",
    "optuna>=4.8.0",
    "pandas>=2.0.0",
    "regex>=2026.2.28",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.35.0",
    "plotly>=5.20.0",
    "nbqa>=1.9.1",
    "sentence-transformers>=5.3.0",
    "streamlit-folium>=0.27.1",
]

